# rails-on-azerothcore

./: .env  .gitignore  .gitmodules  .rubocop.yml  Dockerfile  Gemfile  README.md  docker-compose.yml
RoA/docker/: ac.Dockerfile  rails.Dockerfile
RoA/mod-ruby/: CMakeLists.txt
RoA/mod-ruby/cmake/: after_load_cmake_modules.cmake
RoA/mod-ruby/conf/: mod_ruby.conf.dist
RoA/mod-ruby/src/: mod_ruby_loader.cpp  rice.hpp
RoA/mod-ruby/src/scripts/: ac_player_script.cpp  ac_player_script.hpp  init_scripts.cpp  init_scripts.hpp  player_scripts_handler.cpp  player_scripts_handler.hpp
RoA/mod-ruby/src/vm/: rails_file_watcher.cpp  rails_file_watcher.hpp  ruby_vm.cpp  ruby_vm.hpp
RoA/mod-ruby/src/wrap/: ac_account.cpp  ac_account.hpp  ac_player.cpp  ac_player.hpp  ac_player_script.cpp  ac_player_script.hpp  ac_quest.cpp  ac_quest.hpp  ac_world_session.cpp  ac_world_session.hpp  init_mod_ruby.cpp  init_mod_ruby.hpp
app/models/: application_record.rb  auth_application_record.rb  characters_application_record.rb  world_application_record.rb
app/models/auth/: account.rb  account_access.rb  account_banned.rb  account_muted.rb  autobroadcast.rb  build_info.rb  ip_banned.rb  log.rb  logs_ip_action.rb  motd.rb  realmcharacter.rb  realmlist.rb  secret_digest.rb  update.rb  updates_include.rb  uptime.rb
app/models/characters/: account_datum.rb  account_instance_time.rb  account_tutorial.rb  addon.rb  arena_team.rb  arena_team_member.rb  auctionhouse.rb  banned_addon.rb  battleground_deserter.rb  bugreport.rb  calendar_event.rb  calendar_invite.rb  channel.rb  channels_ban.rb  channels_right.rb  character.rb  character_account_datum.rb  character_achievement.rb  character_achievement_offline_update.rb  character_achievement_progress.rb  character_action.rb  character_arena_stat.rb  character_aura.rb  character_banned.rb  character_battleground_random.rb  character_brew_of_the_month.rb  character_declinedname.rb  character_entry_point.rb  character_equipmentset.rb  character_gift.rb  character_glyph.rb  character_homebind.rb  character_instance.rb  character_inventory.rb  (+70 more)
app/scripts/: player_script.rb
config/: application.rb  cable.yml  credentials.yml.enc  database.yml  environment_wow.rb  shutdown_environment_wow.rb
config/environments/: development.rb  production.rb  test.rb
config/initializers/: roa_loader.rb  roa_reloader.rb
db/: auth_schema.rb  characters_schema.rb  seeds.rb  world_schema.rb
lib/tasks/: db.rake
spec/: rails_helper.rb
spec/support/: database_cleaner.rb  request_json.rb  sidekiq.rb
(+318 files in other folders)
